added dto for pcParts and calculate power endpoint
