# backend/src/data/models/pc_parts.go
@@ -55,7 +55,34 @@ type CpuBrand struct {
 
 type Ssd struct {
 	BaseModel
-	Min              int     `gorm:"not null"`
-	Max              int     `gorm:"not null"`
+	SizeRange        string  `gorm:"not null;unique"`
 	PowerConsumption float64 `gorm:"not null"`
+}
+
+type PcModel struct {
+	Ssd      Ssd `gorm:"foreignKey:SsdId;constraint:OnDelete:NO ACTION"`
+	SsdId    int `gorm:"not null"`
+	SsdCount int `gorm:"not null"`
+
+	Cpu   Cpu `gorm:"foreignKey:CpuId;constraint:OnDelete:NO ACTION"`
+	CpuId int `gorm:"not null"`
+
+	Graphic      Graphic `gorm:"foreignKey:GraphicId;constraint:OnDelete:NO ACTION"`
+	GraphicId    int     `gorm:"not null"`
+	GraphicCount int     `gorm:"not null"`
+
+	Motherboard   Motherboard `gorm:"foreignKey:MotherboardId;constraint:OnDelete:NO ACTION"`
+	MotherboardId int         `gorm:"not null"`
+
+	Ram      Ram `gorm:"foreignKey:RamId;constraint:OnDelete:NO ACTION"`
+	RamId    int `gorm:"not null"`
+	RamCount int `gorm:"not null"`
+
+	HardDrive      HardDrive `gorm:"foreignKey:HardDriveId;constraint:OnDelete:NO ACTION"`
+	HardDriveId    int       `gorm:"not null"`
+	HardDriveCount int       `gorm:"not null"`
+
+	OpticalDrive      OpticalDrive `gorm:"foreignKey:OpticalDriveId;constraint:OnDelete:NO ACTION"`
+	OpticalDriveId    int          `gorm:"not null"`
+	OpticalDriveCount int          `gorm:"not null"`
 }
